# mcp-calculator

./: .gitignore  FEISHU_SETUP_GUIDE.md  README.md  feishu_base.py  feishu_example.py  mcp_config.json  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
tests/: conftest.py  test_setup_validation.py
